--- a/5C Friend-2/Info.plist
+++ b/5C Friend-2/Info.plist
@@ -34,6 +34,20 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>https://aspc.pomona.edu/menu/</key>
+			<dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+			<key>api.openweathermap.org</key>
+			<dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
 			<key>https://www.metro.net</key>
 			<dict>
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
